--- a/core/templates/core/base_modern.html
+++ b/core/templates/core/base_modern.html
@@ -9,6 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Kibray{% endblock %}</title>
     
+    {# Bootstrap 5 CSS - Required for Modals #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     {# Tailwind CSS CDN #}
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
     
@@ -119,6 +122,9 @@
     
     {# Toast Container #}
     <div id="toast-container" class="fixed top-4 right-4 z-50 space-y-2"></div>
+    
+    {# Bootstrap 5 JS Bundle (with Popper) - Required for Modals #}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
     {# Core JavaScript #}
     <script src="{% static 'core/js/kibray-core.js' %}"></script>
