Fix Profit Dashboard budget calculation - use BudgetLine totals
- Changed base budget calculation from Estimate to BudgetLine.baseline_amount
- Total Budgeted = Base Budget (BudgetLines) + Change Orders
- Updated template labels and variables to match

--- a/core/templates/core/project_profit_dashboard.html
+++ b/core/templates/core/project_profit_dashboard.html
@@ -452,8 +452,8 @@
             <div class="detail-card-body">
                 <table class="detail-table">
                     <tr>
-                        <td>{% trans "Base Estimate" %}</td>
-                        <td>${{ estimate_revenue|floatformat:2 }}</td>
+                        <td>{% trans "Base Budget" %}</td>
+                        <td>${{ base_budget|floatformat:2 }}</td>
                     </tr>
                     <tr>
                         <td>{% trans "Change Orders" %}</td>
